# tail-paint

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
packaging/: AppRun  build-appimage.sh  gnome-paint.desktop
src/: Canvas.cpp  Canvas.h  IconLoader.cpp  IconLoader.h  MainWindow.cpp  MainWindow.h  main.cpp
styles/: adwaita-dark.qss  adwaita-light.qss
